syntax = "proto3";

package protobuf;

import "ExecutionState.proto";

option java_package = "edu.snu.vortex.runtime.common.comm";
option java_outer_classname = "ExecutionMessage";

enum MessageType {
    TaskGroupStateChanged = 0;
}

message ExecutorMessage {
    MessageType type = 1;
    oneof messageTypes {
        TaskGroupStateChangedMsg taskStateChangedMsg = 2;
    }
}

message TaskGroupStateChangedMsg {
    string taskGroupId = 1;
    TaskGroupState state = 2;
    string failedTaskId = 3;
}